--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,8 +1,11 @@
+
 /* Space out content a bit */
 body {
-  padding-top: 20px;
+  padding-top: 60px;
   padding-bottom: 20px;
 }
+
+div.error { color: red; font-weight: bold; }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -31,26 +34,6 @@ body {
   border-top: 1px solid #e5e5e5;
 }
 
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}
-
 /* Supporting marketing content */
 .marketing {
   margin: 40px 0;
@@ -59,7 +42,8 @@ body {
   margin-top: 28px;
 }
 
-/* Responsive: Portrait tablets and up */
+/*
+ * Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
   .header,
