--- a/app/views/switch.html
+++ b/app/views/switch.html
@@ -1,8 +1,10 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3 text-center">
-    <h4>Switch View</h4>
-   
+    <h4>Static Switch View</h4>
+    <img src="images/switch.png" alt="Responsive image">
+  
+    <h4>Dynamic Switch View</h4>
     <switch-view device="device"></switch-view>
   </div>
 </div>
