--- a/app/styles/switchView.css
+++ b/app/styles/switchView.css
@@ -1,27 +1,20 @@
 
-.Port {
-  float: left;
-  width: 20px;
-  height: 20px;
-  color: white;
-  font-size: 14px;
-}
 
+.PortText {
+  font-size: 10px;
+  fill       : white;
+}
 .Switch {
-  background-color: grey;
+  background-color: lightgrey;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
 
 .PortColorA {
-  background-color: #C0224E;
+  fill: #C0224E;
 }
 
 .PortColorB {
-  background-color: #42A0BA;
-}
-
-.FiberShape {
-}
-
-.CopperShape {
+  fill: #42A0BA;
 }
 
